  of the underlying R SEXP, and allows to expose `foo<-` type of R methods
  as Python function/methods with side effects.

- Objects of R type RAWSXP are now exposed as :class:`SexpVector`.

- Factory function :func:`unserialize` to build Sexp* instances from byte
  string serialized with R's own 'serialize'.

- Method :meth:`Sexp.__reduce__` for pickling/unpickling


Changes
-------

- The setup.py script is now taking command-line arguments when specifying
  R library-related paths are wished. python setup.py --help build_ext will
  list them
  
:mod:`rpy2.robjects`:

- RS4 no longer makes R's slots as Python attributes through :meth:`__attr__`

- the package is split into modules

Bugs fixed
----------

- :meth:`REnvironment.get` now accepts a named parameter *wantFun*
  (like :meth:`rinterface.SexpEnvironment` does)

- `R CMD config LAPACK_LIBS` could return an empty string when R was compiled
  with the veclib framework, causing the setup.py script to raise an exception.
  setup.py now only print a message about an empty string returned from 
  R CMD config


Release 2.0.4
=============

Bugs fixed
----------

- Added missing named parameter *wantfun* to method :meth:`Renvironment.get`
  (making it similar to :meth:`SexpEnvironment.get`)



Release 2.0.3
=============

New Features
------------

:mod:`rpy2.rinterface`:

- :meth:`process_revents`, a Wrapper for R_ProcessEvents 
  (# suggested by June Kim to help with issues related to interactive display on win32),
  and for R_RunHandlers on UNIX-like systems 
  (# patch by Nathaniel Smith).

- All callbacks are getting a get<callback> to complement the set<callback>.
  (# Patch by Nathaniel Smith) 

- :meth:`Sexp.__deepcopy__` to copy an object (calling Rf_Duplicate) 
   (# from a patch by Nathaniel Smith)
 
Changes
-------
 
- the default for reading and writing the console are now using sys.stdin and sys.stdout 
  (# patch submitted by Nathaniel Smith)
 